<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    tools:context=".Activities.SignUpActivity">


    <ImageButton
        android:id="@+id/BTN_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/app_bg_color"
        android:contentDescription="Back"
        android:src="@drawable/ic_back_arrow" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/BTN_back"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/logo_image"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_blue" />


        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rg_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_veterinarian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Veterinarian"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_regular_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Regular User"
                    android:textColor="@color/black" />
            </RadioGroup>


            <LinearLayout
                android:id="@+id/layout_vet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    android:hint="Name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ET_vet_name"
                        style="@style/CustomTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    android:hint="@string/email_for_ET">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ET_vet_email"
                        style="@style/CustomTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    android:hint="@string/clinic_phone_ET">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_vet_phone"
                        style="@style/CustomTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    android:hint="@string/clinic_address_for_ET">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_vet_address"
                        style="@style/CustomTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_vet_password"
                        style="@style/CustomTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    android:hint="@string/license_number_ET">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_vet_license"
                        style="@style/CustomTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_vet_upload_license"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/logo_color"
                    android:text="Upload Business License"
                    android:textColor="@color/white" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_regular_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    android:hint="Name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_user_name"
                        style="@style/CustomTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    android:hint="@string/email_for_ET">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_user_email"
                        style="@style/CustomTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_user_password"
                        style="@style/CustomTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    android:hint="Pet Name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_pet_name"
                        style="@style/CustomTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/spinner_pet_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/pet_types"
                    android:popupTheme="@layout/spinner_item"
                    android:foregroundTint="@color/black" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_upload_pet_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/logo_color"
                    android:text="Upload Pet Photo"
                    android:textColor="@color/white" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/logo_color"
                android:text="Sign Up"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
